1. Added commons-math jar 2. Attempt to fix text wrap for comments and server directory columns in listJobs.jsp.  A combination of table-layout:fixed and word-break (Chrome) and word-wrap(Firefox) was required. Not tested on IE.

--- a/MSDaPl/trunk/WebRoot/css/global.css
+++ b/MSDaPl/trunk/WebRoot/css/global.css
@@ -638,4 +638,14 @@ span.go_obsolete {
 span.go_obsolete:hover {
 	cursor:help;
 }
+.hardBreak {
+  white-space: normal; /* css-3 */
+  white-space: -moz-pre-wrap !important;; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+, 6, 7, 8 compability-mode */
+  -ms-word-break: break-all; /* Internet Explorer 8 */
+  word-break: break-all; /*break-word works better in Chrome, but it is an undocumented property */
+                         /*word-break is not recognized by Firefox*/
+}
 
